work in progress on applying SVD to document search.